--- a/rcliente/app/src/main/assets/scanner_dlg2.html
+++ b/rcliente/app/src/main/assets/scanner_dlg2.html
@@ -193,10 +193,7 @@ isPhP = "y";
 		<tr>
 			<td class="auto-style1">
 														  <div id="dvRJobItems"  style="border:0px;max-width:300px;">
-															  tytytyr<br>tr<br>
-															  try<br>rty<br>rt<br>
-															  yrt<br>y<br>rt<br>
-															  yrt<br></div>
+															  </div>
 </td>
 		</tr>
 		</table>
@@ -218,6 +215,7 @@ isPhP = "y";
 <script language="javascript" type="text/javascript">
 // JSSHOP.ajax.doNuAjaxPipe("includedNav",  "tplates/index_nav.html", pfRet);
 setTimeout("doBootLoad()", 800);
+setTimeout("doScanJobGet()", 1200);
 // JSSHOP.loadScript("js/" + jscssprefix + "x_menu.js", doACTBboot,"js");
 // doSpinSet("includedContent", "big", "loading....");
 
